minor fixes on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,11 @@ header {
   border-radius: 2%;
   background-color: #e6e6e6;
   margin: 0 1.5vw;
-  height: min(200px, 100%);
+  height: 200px;
   overflow: auto;
 }
 
 ul {
-  max-height: 200px;
   margin: 1em;
   padding-left: 0px;
   list-style-type: none;
@@ -203,17 +202,19 @@ li {
     flex-direction: column;
     align-items: center;
     padding: 0.5em;
-    height: 100%;
+  }
+  .header_span {
+    font-size: 24px;
   }
   .userbox,
   .logbox {
     flex: 1 1 auto;
     justify-content: center;
     margin: 0.2em;
-    height: 20%;
+    height: 20vh;
     width: 100%;
   }
   .logbox {
-    height: 30%;
+    height: 30vh !important;
   }
 }
